# BKNG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
config/: bot.yaml
docker/: Dockerfile
docs/: DEPLOYMENT.md
migrations/: 001_initial.sql  002_account_events.sql
src/kronos_futures/: __init__.py
src/kronos_futures/bot/: __init__.py  binance.py  cli.py  domain.py  engine.py  inference.py  interfaces.py  kronos.py  paper.py  portfolio.py  risk.py  service.py  settings.py  store.py  strategies.py
tests/: test_binance.py  test_candle_strategies.py  test_engine.py  test_paper.py  test_portfolio.py  test_risk.py  test_settings.py
