[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kronos-binance-bot"
version = "0.1.0"
description = "Dockerized Kronos Binance USD-M futures bot"
requires-python = ">=3.11,<3.13"
dependencies = [
  "asyncpg==0.30.0",
  "einops==0.8.1",
  "fastapi==0.115.6",
  "huggingface-hub==0.33.1",
  "httpx==0.28.1",
  "numpy==2.1.3",
  "pandas==2.2.3",
  "prometheus-client==0.21.1",
  "psutil==6.1.1",
  "pydantic==2.10.4",
  "PyYAML==6.0.2",
  "safetensors==0.6.2",
  "torch==2.6.0",
  "tqdm==4.67.1",
  "uvicorn==0.34.0",
  "websockets==14.1",
]

[project.scripts]
kronos-bot = "kronos_futures.bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
